{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 74,
  "lineage": "22a8ef6c-659e-f26d-ca30-08b1d64d3dc1",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "http-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "RATE",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-d6b4b4474987/regions/us-central1/instanceGroups/us-central1-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 50,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-d6b4b4474987/regions/europe-west1/instanceGroups/europe-west1-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0.8
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-04-27T04:58:25.338-07:00",
            "enable_cdn": false,
            "fingerprint": "GyOtocbLhRk=",
            "generated_id": 2820012303475793294,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-d6b4b4474987/global/healthChecks/http-health-check"
            ],
            "id": "projects/qwiklabs-gcp-00-d6b4b4474987/global/backendServices/http-backend",
            "load_balancing_scheme": "EXTERNAL",
            "log_config": [
              {
                "enable": true,
                "sample_rate": 1
              }
            ],
            "name": "http-backend",
            "port_name": "http",
            "project": "qwiklabs-gcp-00-d6b4b4474987",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-d6b4b4474987/global/backendServices/http-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "data.google_compute_image.mywebserver",
            "google_compute_health_check.http-health-check",
            "google_compute_instance_template.mywebserver-template",
            "google_compute_region_instance_group_manager.europe-west1-mig",
            "google_compute_region_instance_group_manager.us-central1-mig"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw-allow-health-checks",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-04-27T04:33:13.036-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-00-d6b4b4474987/global/firewalls/fw-allow-health-checks",
            "log_config": [],
            "name": "fw-allow-health-checks",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-d6b4b4474987/global/networks/default",
            "priority": 1000,
            "project": "qwiklabs-gcp-00-d6b4b4474987",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-d6b4b4474987/global/firewalls/fw-allow-health-checks",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-health-checks"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "lb-ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.244.252.31",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-04-27T05:04:11.504-07:00",
            "id": "projects/qwiklabs-gcp-00-d6b4b4474987/global/addresses/lb-ipv4-1",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "lb-ipv4-1",
            "prefix_length": 0,
            "project": "qwiklabs-gcp-00-d6b4b4474987",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-d6b4b4474987/global/addresses/lb-ipv4-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "lb-ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "2600:1901:0:e4ef::",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-04-27T05:04:12.034-07:00",
            "id": "projects/qwiklabs-gcp-00-d6b4b4474987/global/addresses/lb-ipv6-1",
            "ip_version": "IPV6",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "lb-ipv6-1",
            "prefix_length": 0,
            "project": "qwiklabs-gcp-00-d6b4b4474987",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-d6b4b4474987/global/addresses/lb-ipv6-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http-content-rule-ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/qwiklabs-gcp-00-d6b4b4474987/global/forwardingRules/http-content-rule-ipv4",
            "ip_address": "35.244.252.31",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-content-rule-ipv4",
            "port_range": "80",
            "project": "qwiklabs-gcp-00-d6b4b4474987",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-d6b4b4474987/global/forwardingRules/http-content-rule-ipv4",
            "target": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-d6b4b4474987/global/targetHttpProxies/http-lb-proxy-ipv4"
          },
          "dependencies": [
            "data.google_compute_image.mywebserver",
            "google_compute_backend_service.http-backend",
            "google_compute_global_address.lb-ipv4",
            "google_compute_health_check.http-health-check",
            "google_compute_instance_template.mywebserver-template",
            "google_compute_region_instance_group_manager.europe-west1-mig",
            "google_compute_region_instance_group_manager.us-central1-mig",
            "google_compute_target_http_proxy.http-lb-proxy-ipv4",
            "google_compute_url_map.http-lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http-content-rule-ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/qwiklabs-gcp-00-d6b4b4474987/global/forwardingRules/http-content-rule-ipv6",
            "ip_address": "2600:1901:0:e4ef::",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-content-rule-ipv6",
            "port_range": "80",
            "project": "qwiklabs-gcp-00-d6b4b4474987",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-d6b4b4474987/global/forwardingRules/http-content-rule-ipv6",
            "target": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-d6b4b4474987/global/targetHttpProxies/http-lb-proxy-ipv6"
          },
          "dependencies": [
            "data.google_compute_image.mywebserver",
            "google_compute_backend_service.http-backend",
            "google_compute_global_address.lb-ipv6",
            "google_compute_health_check.http-health-check",
            "google_compute_instance_template.mywebserver-template",
            "google_compute_region_instance_group_manager.europe-west1-mig",
            "google_compute_region_instance_group_manager.us-central1-mig",
            "google_compute_target_http_proxy.http-lb-proxy-ipv6",
            "google_compute_url_map.http-lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "stress-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-d6b4b4474987/global/images/mywebserver",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-d6b4b4474987/zones/us-west1-b/disks/stress-test"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-00-d6b4b4474987/zones/us-west1-b/instances/stress-test",
            "instance_id": "6334762119726617638",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "VmDvxjD50EE=",
            "name": "stress-test",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-d6b4b4474987/global/networks/default",
                "network_ip": "10.138.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-d6b4b4474987/regions/us-west1/subnetworks/default",
                "subnetwork_project": "qwiklabs-gcp-00-d6b4b4474987"
              }
            ],
            "project": "qwiklabs-gcp-00-d6b4b4474987",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-d6b4b4474987/zones/us-west1-b/instances/stress-test",
            "service_account": [
              {
                "email": "25228164250-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol",
                  "https://www.googleapis.com/auth/trace.append"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-west1-b"
          },
          "dependencies": [
            "data.google_compute_default_service_account.default",
            "data.google_compute_image.mywebserver"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": false,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20230411",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-d6b4b4474987/zones/us-central1-a/disks/webserver"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "desired_status": "TERMINATED",
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-00-d6b4b4474987/zones/us-central1-a/instances/webserver",
            "instance_id": "8400554463259517164",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "VmDvxjD50EE=",
            "name": "webserver",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-d6b4b4474987/global/networks/default",
                "network_ip": "10.128.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-d6b4b4474987/regions/us-central1/subnetworks/default",
                "subnetwork_project": "qwiklabs-gcp-00-d6b4b4474987"
              }
            ],
            "project": "qwiklabs-gcp-00-d6b4b4474987",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-d6b4b4474987/zones/us-central1-a/instances/webserver",
            "service_account": [
              {
                "email": "25228164250-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol",
                  "https://www.googleapis.com/auth/trace.append"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-health-checks"
            ],
            "tags_fingerprint": "DPTFiyF5goQ=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "data.google_compute_default_service_account.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat-router-us-central1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-27T04:37:14.094-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/qwiklabs-gcp-00-d6b4b4474987/regions/us-central1/routers/nat-router-us-central1",
            "name": "nat-router-us-central1",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-d6b4b4474987/global/networks/default",
            "project": "qwiklabs-gcp-00-d6b4b4474987",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-d6b4b4474987/regions/us-central1/routers/nat-router-us-central1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat-config",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "qwiklabs-gcp-00-d6b4b4474987/us-central1/nat-router-us-central1/nat-config",
            "log_config": [
              {
                "enable": true,
                "filter": "ALL"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat-config",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "qwiklabs-gcp-00-d6b4b4474987",
            "region": "us-central1",
            "router": "nat-router-us-central1",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_router.nat-router-us-central1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http-lb-proxy-ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-27T05:07:37.020-07:00",
            "id": "projects/qwiklabs-gcp-00-d6b4b4474987/global/targetHttpProxies/http-lb-proxy-ipv4",
            "name": "http-lb-proxy-ipv4",
            "project": "qwiklabs-gcp-00-d6b4b4474987",
            "proxy_bind": false,
            "proxy_id": 2844804804623457126,
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-d6b4b4474987/global/targetHttpProxies/http-lb-proxy-ipv4",
            "url_map": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-d6b4b4474987/global/urlMaps/http-lb"
          },
          "dependencies": [
            "data.google_compute_image.mywebserver",
            "google_compute_backend_service.http-backend",
            "google_compute_health_check.http-health-check",
            "google_compute_instance_template.mywebserver-template",
            "google_compute_region_instance_group_manager.europe-west1-mig",
            "google_compute_region_instance_group_manager.us-central1-mig",
            "google_compute_url_map.http-lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http-lb-proxy-ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-27T05:07:37.032-07:00",
            "id": "projects/qwiklabs-gcp-00-d6b4b4474987/global/targetHttpProxies/http-lb-proxy-ipv6",
            "name": "http-lb-proxy-ipv6",
            "project": "qwiklabs-gcp-00-d6b4b4474987",
            "proxy_bind": false,
            "proxy_id": 451495104254303078,
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-d6b4b4474987/global/targetHttpProxies/http-lb-proxy-ipv6",
            "url_map": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-d6b4b4474987/global/urlMaps/http-lb"
          },
          "dependencies": [
            "data.google_compute_image.mywebserver",
            "google_compute_backend_service.http-backend",
            "google_compute_health_check.http-health-check",
            "google_compute_instance_template.mywebserver-template",
            "google_compute_region_instance_group_manager.europe-west1-mig",
            "google_compute_region_instance_group_manager.us-central1-mig",
            "google_compute_url_map.http-lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "http-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-04-27T05:05:32.719-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-d6b4b4474987/global/backendServices/http-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "0xkEn4M3vcs=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/qwiklabs-gcp-00-d6b4b4474987/global/urlMaps/http-lb",
            "map_id": 9109769476406500323,
            "name": "http-lb",
            "path_matcher": [],
            "project": "qwiklabs-gcp-00-d6b4b4474987",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-00-d6b4b4474987/global/urlMaps/http-lb",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_compute_image.mywebserver",
            "google_compute_backend_service.http-backend",
            "google_compute_health_check.http-health-check",
            "google_compute_instance_template.mywebserver-template",
            "google_compute_region_instance_group_manager.europe-west1-mig",
            "google_compute_region_instance_group_manager.us-central1-mig"
          ]
        }
      ]
    }
  ]
}